# SAB_Invest

./: .gitignore  README.md  pyproject.toml  session01_01_python_foundations_financial_data_retrieval.ipynb  session01_02_wrangling_financial_time_series.ipynb  session01_sp500_CAPM.ipynb  session01_tadawul_CAPM.ipynb  session02_01_portfolio_analytics_risk_metrics.ipynb  session02_02_macroeconomic_data_market_context.ipynb  session03_01_visualisation_dashboards.ipynb  session03_01_visualisation_dashboards_ai_development.ipynb  session03_02_group_simulation_challenge.ipynb
