[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "dash>=4.1.0",
    "fredapi>=0.5.2",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "kaleido>=1.2.0",
    "lxml>=6.0.2",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.1",
]
